@@ -1,5 +1,14 @@
 plugins {
-    id("buildsrc.convention.kotlin-jvm")
+    kotlin("jvm")
+}
+
+kotlin {
+    jvmToolchain(22)
+}
+
+tasks.test {
+    useJUnitPlatform()
+    jvmArgs("--enable-native-access=ALL-UNNAMED")
 }
 
 dependencies {
